src-ken&y/objects/Resource__c.object
<CustomObject>
    <customHelpPage>HelpResources</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <inlineHelpText>Lookup to Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Resource</relationshipLabel>
        <relationshipName>Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company does not match Resource Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Resource</relationshipLabel>
        <relationshipName>Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Rate for this resource</description>
        <inlineHelpText>Rate for this resource</inlineHelpText>
        <label>Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Unique__c</fullName>
        <label>Resource Unique</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Negative_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>Rate__c &lt; 0.0</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Rate cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>